<resources>
    <string name="app_name">RiderHub</string>
    <string name="title_activity_maps">RiderHub</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="rideout">Rideout</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="welcomeText">Welcome To RiderHub</string>
    <string name="passwordLabel">password</string>
    <string name="passwordLabel2">confirm password</string>
    <string name="userLabel">username</string>
    <string name="loginBtn">Login</string>
    <string name="username_is_required">username is required</string>
    <string name="usernameFormPlaceholder">your username</string>
    <string name="password_is_required">password is required</string>
    <string name="loginNextBtn">next</string>
    <string name="passwordRequirements">- min. 6 characters \n- 1 special character \n- 1 number</string>
    <string name="registerTitle">Setup your account</string>
    <string name="passwordRequirementLabel">*Note* Password requirements:</string>
    <string name="setup_your_profile">Setup your profile</string>
    <string name="finishRegistration">finish</string>
    <string name="createRideoutTitle">Plan rideout</string>
</resources>